List property changed to singular entity 'message'

--- a/public/admin/message.html
+++ b/public/admin/message.html
@@ -31,7 +31,7 @@
        <div class="clearfix top-header" data-v-copy-from="index.html,.top-header">
       </div>
 
-      <form id="settings-form" action="" method="post" class="needs-validation" data-v-message>
+      <form id="settings-form" action="" method="post" class="settings" data-v-message>
         <input type="hidden" name="action" id="action" value="save">
         <div class="actions flex-column flex-md-row">
           <div class="title">
@@ -98,12 +98,10 @@
 		}
 	</style>
 
-    <script id="jquery-js" src="js/jquery.min.js"></script>
     <script id="popper-js" src="js/popper.min.js"></script>
     <script id="bootstrap-js" src="js/bootstrap.min.js"></script>
 
     <!--
-<script src="../../js/jquery.min.js"></script>
 <script src="../../js/popper.min.js"></script>
 <script src="../../js/bootstrap.min.js"></script>
 -->
