--- a/public/admin/messages.html
+++ b/public/admin/messages.html
@@ -30,7 +30,7 @@
 
       </div>
 
-      <form id="settings-form" action="" method="post" class="needs-validation" novalidate data-v-product>
+      <form id="settings-form" action="" method="post" class="settings" data-v-product>
         <input type="hidden" name="action" id="action" value="save">
         <div class="actions">
           <div class="title">
@@ -154,12 +154,12 @@
                       <td class="actions" style="min-width:200px">
 
                         <div class="btn-group">
-                          <a  class="btn btn-outline-secondary" data-v-message-edit-url>
+                          <a class="btn btn-icon btn-outline-secondary" data-v-message-edit-url>
                             <i class="la la-pencil-alt text-primary"></i>
                             <span>View</span>
                           </a>
 
-                          <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
+                          <button type="button" class="btn btn-icon btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
 
                             <span class="visually-hidden">Toggle primary</span>
                           </button>
