Update admin paths in templates, cache unread message and clear notifications cache after a message is read

--- a/public/admin/message.html
+++ b/public/admin/message.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <link rel="icon" href="/favicon.ico">
 
   <base href="../">
 
@@ -102,12 +102,12 @@
     <script id="bootstrap-js" src="js/bootstrap.min.js"></script>
 
     <!--
-<script src="../../js/popper.min.js"></script>
-<script src="../../js/bootstrap.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 -->
 
     
-    <script id="admin-js" type="module" src="../../js/admin.js"></script>
+    <script id="admin-js" type="module" src="/js/admin.js"></script>
 
 
     <script>
