--- a/public/admin/messages.html
+++ b/public/admin/messages.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <link rel="icon" href="/favicon.ico">
 
   <base href="">
 
@@ -21,8 +21,7 @@
 
   <div id="container">
 
-       <div class="sidebar" data-v-copy-from="index.html,.sidebar"></div>
-
+    <div class="sidebar" data-v-copy-from="index.html,.sidebar"></div>
 
     <div class="main">
 
@@ -200,13 +199,15 @@
       </form>
 
     </div>
+  
+     <div id="main-footer" data-v-copy-from="index.html,#main-footer"></div>
   </div>
 
 
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script id="admin-js" type="module" src="../../js/admin.js"></script>
-  <script type="module" src="../../js/admin.js"></script>
+  <script id="admin-js" type="module" src="/js/admin.js"></script>
+  <script type="module" src="/js/admin.js"></script>
 
 </body>
 </html>
